fix footer link on mobile

--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -118,7 +118,7 @@ $widget-width: 132px;
     margin-bottom: $spacing-stack-20;
   }
 
-  &-logo {
+  &-logo svg {
     width: $logo-width;
     height: $logo-height;
   }
